--- a/.github/workflows/bootstrap.yaml
+++ b/.github/workflows/bootstrap.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: Create new repository from template
         run: |
           curl -X POST https://api.github.com/orgs/FittipaldiOrg/repos \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: token ${{ secrets.ORG_PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
           -d '{
             "name": "'"$SERVICE_NAME"'",
