--- a/test3-repo-api.yaml
+++ b/test3-repo-api.yaml
@@ -1,3 +1,3 @@
 service:
-  name: test-repo-api3
-  description: "tis is a repo test3"
+  name: test-repo-api-three
+  description: "tis is a repo test 3"
