--- a/.github/workflows/bootstrap.yaml
+++ b/.github/workflows/bootstrap.yaml
@@ -102,8 +102,12 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/FittipaldiOrg/template.git template-repo
           cd template-repo
-          sh ./setup.sh --service_name "${{ env.SERVICE_NAME }}"
           rm -rf .git  # Remove old git history
+
+      - name: Run setup script
+        run: |
+          cd template-repo
+          sh ./setup.sh --service_name "${{ env.SERVICE_NAME }}"
 
       - name: Push template code to new repository
         run: |
