--- a/.github/workflows/bootstrap.yaml
+++ b/.github/workflows/bootstrap.yaml
@@ -109,6 +109,7 @@ jobs:
           cd template-repo
           ls -la 
           bash ./setup.sh --service_name "${{ env.SERVICE_NAME }}"
+          cat RENAME.md
 
       - name: Push template code to new repository
         run: |
